# HFLink

./: .gitignore  .gitmodules  gen_usb_desc.py  readme.md  vide.toml
FPGA/: HFLink.gprj
FPGA/impl/: HFLink_process_config.json
FPGA/src/: AHB_USBDevice.v  APB_Stream_UART.v  HFLink.cst  HFLink.rao  HFLinkDAP.rao  HFLinkJTAG.rao  HFLinkSWD.rao  HFLinkSWO.rao  HFLinkUART.rao  USB_desc.v  timming.sdc  top.v
FPGA/src/DAP_Controller/: DAP_Cmd.v  DAP_Controller.v
FPGA/src/DAP_Controller/cmd_worker/: DAP_Delay.v  DAP_Delay_Worker.v  DAP_SWJ.v
FPGA/src/DAP_Controller/interface/: DAP_BaudGenerator.v  DAP_GPIO.v  DAP_SWO.v  DAP_Seqence.v  DAP_USB_Packer.v  DAP_USB_Receiver.v  DAP_USB_Transfer.v
FPGA/src/fifo_sc_top/: fifo_sc_top.ipc  fifo_sc_top.v
FPGA/src/fifo_top/: fifo_top.ipc  fifo_top.v
FPGA/src/gowin_dpb/: gowin_dpb.ipc  gowin_dpb.mod  gowin_dpb.v
FPGA/src/gowin_empu_m1/: gowin_empu_m1.ipc  gowin_empu_m1.v
FPGA/src/gowin_pll/: gowin_pll.ipc  gowin_pll.mod  gowin_pll.v  gowin_pll_mod.v
FPGA/src/sync_fifo/: sync_tx_pkt_mailbox.v  usb_fifo.v
FPGA/src/usb_device_controller/: usb_device_controller.ipc  usb_device_controller.v
FPGA/testbench/DAP_JTAG_Transfer_tb/: DAP_JTAG_Transfer_tb.v  build.ninja
FPGA/testbench/DAP_SWD_Trans_tb/: DAP_SWD_Trans_tb.v  build.ninja  test_data.txt
FPGA/testbench/DAP_SWO_tb/: DAP_SWO_tb.v  IDDR.v  build.ninja  ui.gtkw
FPGA/testbench/DAP_USB_Receiver_tb/: DAP_USB_Reveiver_tb.v  build.ninja
Hardware/lib/: HPM6280Foc.kicad_sym
Hardware/lib/3D/: LED-SMD_4P-1615RGB.STEP
Hardware/lib/Library.pretty/: BTB-DF40C-60DS-0.4V(51)#.kicad_mod  LED_RGBA_1615.kicad_mod  test_point_0.5mm.kicad_mod
Hardware/plus/: GW5A_LV25MG121N.kicad_sch  HFLink_Plus.kicad_dru  HFLink_Plus.kicad_pcb  HFLink_Plus.kicad_pro  HFLink_Plus.kicad_sch  INTERFACE.kicad_sch  USB3320.kicad_sch  fp-lib-table  sym-lib-table
MCU/: CMakeLists.txt  CMakePresets.json  cortex_m1.ld
MCU/Application/: CMakeLists.txt  DAP_config.h  GOWIN_M1_APP.ld  GOWIN_M1_APP_startup.s  GOWIN_M1_it.c  board.h  main.c  soft_timer.c  soft_timer.h
MCU/Application/ads1115/: ads1115.c  ads1115.h
MCU/Application/config_db/: config_db.c  config_db.h
MCU/Application/dap/: dap.c  dap.h  dap_vendor0_handler.c  dap_vendor1_handler.c
MCU/Application/easyflash/: ef_cfg.h  ef_port.c
MCU/Application/spiflash/: spiflash.c  spiflash.h
MCU/Application/upgrade/: upgrade.c  upgrade.h
MCU/Application/usb/: usb_cdc.h  usb_def.h  usbd.c  usbd.h  usbd_core.c  usbd_core.h
MCU/Bootloader/: CMakeLists.txt  GOWIN_M1_BL.ld  GOWIN_M1_it.c  boot.c
MCU/Firmware/: CMakeLists.txt
MCU/Firmware/CMSIS/Device/: GOWIN_M1.h  system_GOWIN_M1.c
MCU/Firmware/drivers/inc/: GOWIN_M1_axisuart.h  GOWIN_M1_dap.h  GOWIN_M1_qspi_flash.h  GOWIN_M1_usbd.h
MCU/Firmware/drivers/src/: GOWIN_M1_axisuart.c  GOWIN_M1_dap.c  GOWIN_M1_ethernet.c  GOWIN_M1_misc.c  GOWIN_M1_qspi_flash.c  GOWIN_M1_usbd.c
MCU/FlashAlgo/: CMakeLists.txt  FlashDev.c  FlashOS.h  FlashPrg.c  GOWIN_M1_FlashAlgo.ld  JLinkDevices.xml
MCU/cmake/: gcc-arm-none-eabi.cmake  git_version.h.in  refresh_git_version.cmake
MCU/sources/: DAP_config.h  main.c
MCU/sources/usb/: usbd.c
MCU/tools/: make_itcm.py  package.py
test/: dap.py  main.py
